# personal-mcp-bridge

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
demo/: run_demo.py
demo/mock_data/notes/: todo.txt  welcome.md
demo/mock_data/reports/: q1.md
src/personal_mcp_bridge/: __init__.py  __main__.py  bridge.py  fs_safety.py  release_mode.py  roots.py  server.py
tests/: conftest.py  test_bridge_behavior.py  test_export_hygiene.py  test_public_mode.py
